[package]
name = "cloud-p2p"
version = "0.1.0"
edition = "2021"

[lib]
name = "cloud_p2p"
path = "src/lib.rs"

[[bin]]
name = "cloud-p2p"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"         # you can swap to bincode later for speed
thiserror = "1"
anyhow = "1"
futures = "0.3"
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.21"
